// Copyright (C) 2025  Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.fragment;

import "google/api/client.proto";
import "google/protobuf/wrappers.proto";

service MaxResultsDatasetService {
  option (google.api.default_host) = "my.example.com";
  rpc ListMaxResultsDataset(ListMaxResultsDatasetRequest) returns (ListMaxResultsDatasetResponse) {
  }
}

message ListMaxResultsDatasetRequest {
  google.protobuf.UInt32Value max_results = 2;
  string page_token = 3;
}

message ListMaxResultsDatasetResponse {
  string next_page_token = 3;
  repeated string datasets = 4;
}
